--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -10,6 +10,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    {% comment %} <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static "css/index.css" %}"
+    /> {% endcomment %}
   </head>
   <body>
     <div id="main">
